# fast_html

./: .gitignore  CHANGELOG.md  README.md  README.rst  pyproject.toml  test.py
fast_html/: __init__.py  utils.py
htmx_gen/: __init__.py
