[tool.poetry]
name = "htmx_gen"
version = "1.0.2"
description = "Generate HTML conveniently and efficiently"
authors = ["Pierre <pierre.carbonnelle@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/pcarbonn/htmx_gen"
license = "LGPL-3.0-or-later"
keywords = ["HTML", "HTMX"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Internet :: WWW/HTTP"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.1"]
build-backend = "poetry.core.masonry.api"
