[tool.poetry]
name = "fast_html"
version = "1.0.11"
description = "A fast, minimalist HTML generator"
authors = ["Pierre <pierre.carbonnelle@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pcarbonn/fast_html"
license = "LGPL-3.0-or-later"
keywords = ["HTML", "HTMX"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Internet :: WWW/HTTP"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.1"]
build-backend = "poetry.core.masonry.api"
